--- a/services/mfe1/package.json
+++ b/services/mfe1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "container",
+  "name": "mfe1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,9 @@
     "react-dom": "^18.1.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0",
+    "babel-loader": "^8.2.2",
+    "@babel/preset-react": "7.17.12",
+    "@babel/preset-env": "7.18.2",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
@@ -21,7 +24,7 @@
   "scripts": {
     "dev": "webpack serve",
     "start": "react-scripts start",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js --mode=production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -p 3001"
