--- a/services/mfe2/package.json
+++ b/services/mfe2/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.1.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1",
+    "@babel/preset-react": "7.17.12",
+    "@babel/preset-env": "7.18.2",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-server": "^0.1.2"
@@ -19,7 +21,7 @@
   "scripts": {
     "dev": "webpack serve",
     "start": "react-scripts start",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js --mode=production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -p 3002"
